syntax = "proto3";
package proto.config;

option go_package = "github.com/spinnaker/kleat/api/client/config";

import "config/clouddriver.proto";
import "config/deck.proto";
import "config/deck_env.proto";
import "config/echo.proto";
import "config/fiat.proto";
import "config/front50.proto";
import "config/gate.proto";
import "config/igor.proto";
import "config/kayenta.proto";
import "config/orca.proto";
import "config/rosco.proto";
import "config/monitoring.proto";
import "config/managed_delivery.proto";

// Configuration for Spinnaker's microservices.
message Services {
  Clouddriver clouddriver = 1;
  Echo echo = 2;
  Front50 front50 = 3;
  Orca orca = 4;
  Gate gate = 5;
  Fiat fiat = 6;
  Kayenta kayenta = 7;
  Rosco rosco = 8;
  Deck deck = 9;
  DeckEnv deckEnv = 10;
  Igor igor = 11;
  Monitoring monitoring = 12;
  Keel keel = 13;
}
